--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "pinia": "^3.0.1",
     "vue": "^3.2.13",
