--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.1",
     "pinia": "^3.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
