--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jquery": "^3.7.1",
     "pinia": "^3.0.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-charts": "^1.1.33"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
