--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
     "pinia": "^3.0.1",
